--- a/templates/dalton.html
+++ b/templates/dalton.html
@@ -25,15 +25,15 @@
         <div class="row">
             <div class="input-field col s4 offset-s2">
                 &nbsp;<input id="stringi1" name="stringi1" type="number">
-                <label for="stringi1" id="label_stringi1">Номер строки<font color="red">&nbsp;*</font></label>
+                <label for="stringi1" id="label_stringi1">Высота доски Гальтона(1-10)<font color="red">&nbsp;*</font></label>
             </div>
             <div class="input-field col s4">
                 &nbsp;<input id="stringi2" name="stringi2" type="number">
-                <label for="stringi2" id="label_stringi2">Кол-во шаров<font color="red">&nbsp;*</font></label>
+                <label for="stringi2" id="label_stringi2">Кол-во шаров(1-2000)<font color="red">&nbsp;*</font></label>
             </div>
         </div>
         <br>
-        <button type="submit" class="btn">Сформировать</button>
+        <button type="submit" class="btn">Сгенерировать доску Гальтона</button>
     </div>
 </form>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
