--- a/templates/pohui.html
+++ b/templates/pohui.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="input-field col s1 offset-s2">
                 &nbsp;<input id="stringi1" name="stringi1" type="number">
-                <label for="stringi1" id="label_stringi1">Номер строки<font color="red">&nbsp;*</font></label>
+                <label for="stringi1" id="label_stringi1">Высота доски Гальтона(1-10)<font color="red">&nbsp;*</font></label>
             </div>
             <div class="input-field col s1">
                 &nbsp;<input id="stringi2" name="stringi2" type="number">
@@ -33,7 +33,7 @@
             </div>
             <div class="input-field col s6">
                 &nbsp;<input id="stringi3" name="stringi3" type="text">
-                <label for="stringi3" id="label_stringi3">Вероятности<font color="red">&nbsp;*</font></label>
+                <label for="stringi3" id="label_stringi3">Вероятности поворота влево<font color="red">&nbsp;*</font></label>
             </div>
         </div>
         <br>
