--- a/templates/pohui.html
+++ b/templates/pohui.html
@@ -29,7 +29,7 @@
             </div>
             <div class="input-field col s1">
                 &nbsp;<input id="stringi2" name="stringi2" type="number">
-                <label for="stringi2" id="label_stringi2">Кол-во шаров<font color="red">&nbsp;*</font></label>
+                <label for="stringi2" id="label_stringi2">Кол-во шаров(1-10000)<font color="red">&nbsp;*</font></label>
             </div>
             <div class="input-field col s6">
                 &nbsp;<input id="stringi3" name="stringi3" type="text">
