--- a/templates/pohui.html
+++ b/templates/pohui.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <br>
-        <button type="submit" class="btn">Сформировать</button>
+        <button type="submit" class="btn">Сгенерировать доску Гальтона</button>
     </div>
 </form>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
