--- a/templates/line.html
+++ b/templates/line.html
@@ -25,11 +25,11 @@
         <div class="row">
             <div class="input-field col s4 offset-s2">
                 &nbsp;<input id="stringi1" name="stringi1" type="number">
-                <label for="stringi1" id="label_stringi1">Номер строки<font color="red">&nbsp;*</font></label>
+                <label for="stringi1" id="label_stringi1">Высота доски Гальтона<font color="red">&nbsp;*</font></label>
             </div>
         </div>
         <br>
-        <button type="submit" class="btn">Сформировать</button>
+        <button type="submit" class="btn">Вывести вероятности поворотов налево</button>
     </div>
 </form>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
