--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -33,7 +33,7 @@
                 <label for="stringi2" id="label_stringi2">Кол-во шаров<font color="red">&nbsp;*</font></label>
             </div>
             <div class="input-field col s6">
-                &nbsp;<input id="stringi3" name="stringi3" type="float">
+                &nbsp;<input id="stringi3" name="stringi3" type="number">
                 <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
             </div>
         </div>
