--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -35,7 +35,7 @@
         </div>
 	<div class="input-field col s6">
                 <input id="stringi3" name="stringi3" type="float">
-                <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
             </div>    
         <br>
         <button type="submit" class="btn">Сгенерировать</button>
