--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -33,9 +33,9 @@
                 <label for="stringi2" id="label_stringi2">Кол-во шаров<font color="red">&nbsp;*</font></label>
             </div>
         </div>
-	<div class="input-field col s6">
+	<div align="left" class="input-field col s6">
                 <input id="stringi3" name="stringi3" type="float">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
+                <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
             </div>    
         <br>
         <button type="submit" class="btn">Сгенерировать</button>
