--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -33,14 +33,16 @@
                 <label for="stringi2" id="label_stringi2">Кол-во шаров<font color="red">&nbsp;*</font></label>
             </div>
         </div>
-	<div left: 50px class="input-field col s6">
+    </div>
+    <div left: 50px class="input-field col s6">
                 <input id="stringi3" name="stringi3" type="float">
 		<br>
                 <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
-            </div>    
-        <br>
-        <button type="submit" class="btn">Сгенерировать</button>
-    </div>
+     </div>    
+     <br>
+     <div>   
+	<button type="submit" class="btn">Сгенерировать</button>
+     </div> 	     
 </form>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
