--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -34,13 +34,13 @@
             </div>
         </div>
     </div>
-    <div left: 50px class="input-field col s6">
+    <div left: 100px class="input-field col s6">
                 <input id="stringi3" name="stringi3" type="float">
 		<br>
                 <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
      </div>    
      <br>
-     <div>   
+     <div align="center">   
 	<button type="submit" class="btn">Сгенерировать</button>
      </div> 	     
 </form>
