--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -36,8 +36,7 @@
     </div>
     <div left: 100px class="input-field col s6">
                 <input id="stringi3" name="stringi3" type="float">
-		<br>
-                <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
+                <label align ="center" for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
      </div>    
      <br>
      <div align="center">   
