--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -34,9 +34,9 @@
             </div>
         </div>
     </div>
-    <div left: 100px class="input-field col s6">
+    <div class="input-field col s2 offset-s2">
                 <input id="stringi3" name="stringi3" type="float">
-                <label align ="center" for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
+                <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
      </div>    
      <br>
      <div align="center">   
