--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="input-field col s2 offset-s2">
-                <input id="stringi3" name="stringi3" type="float">
+                <input id="stringi3" name="stringi3" type="number">
                 <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
      </div>    
      <br>
