--- a/templates/nochance.html
+++ b/templates/nochance.html
@@ -32,16 +32,14 @@
                 &nbsp;<input id="stringi2" name="stringi2" type="number">
                 <label for="stringi2" id="label_stringi2">Кол-во шаров<font color="red">&nbsp;*</font></label>
             </div>
-        </div>
-    </div>
-    <div class="input-field col s2 offset-s2">
-                <input id="stringi3" name="stringi3" type="float" align="center">
+            <div class="input-field col s6">
+                &nbsp;<input id="stringi3" name="stringi3" type="text">
                 <label for="stringi3" id="label_stringi3">Вероятность<font color="red">&nbsp;*</font></label>
-     </div>    
-     <br>
-     <div align="center">   
-	<button type="submit" class="btn">Сгенерировать</button>
-     </div> 	     
+            </div>
+        </div>
+        <br>
+        <button type="submit" class="btn">Сгенерировать</button>
+    </div>
 </form>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
