--- a/templates/dalton.html
+++ b/templates/dalton.html
@@ -37,6 +37,9 @@
         <button type="submit" class="btn">Сгенерировать доску Гальтона</button>
     </div>
 </form>
+<p align="center">
+  <img src="dosca-604x270.jpg">
+</p>    
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="../static/js/check_sign_up.js"></script>
