--- a/templates/dalton.html
+++ b/templates/dalton.html
@@ -38,7 +38,7 @@
     </div>
 </form>
 <p align="center">
-  <img src="https://github.com/alexladnev/dalton_table/blob/master/templates/dosca-604x270.jpg">
+  <img src="./dosca-604x270.jpg">
 </p>    
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
